# raven

./: .claudeignore  .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  TODO.md  TODO_DEFERRED.md  activate_venv.sh  convert-all-wos2bib.sh  countlines.py  cuda-list-devices.py  dpg-notes.md  dpg-threading-notes.md  env.sh  install_no_cuda.sh  install_with_cuda.sh  no-hammer-hf.sh  pyproject.toml  raven-style-guide.md  requirements.txt  run-on-internal-gpu.sh  setup.py
.claude/: settings.json
.github/workflows/: ci.yml  coverage.yml
briefs/: anime4k-performance-audit.md  avatar-client-crop.md  avatar-render-pipeline.md  cherrypick-compare-mode.md  dpg-keycodes.md  dpg_markdown-bullet-tooltip-bug.md  dpg_markdown_bullet_verify.py  keyboard-layout-detection.md  logsetup-fleet-wide.md  ml-test-tier.md  ntsc-vhs-noise.md  papers-submodule.md  speech-extract-to-common-implementation.md  speech-extract-to-common.md  tha3-performance-audit.md  tools_bench_pipeline_overlap.py  tools_debug_torch_compile.py  tools_visualizer_rewrite_to_app_state.py  unpythonic-style-extract-2026-02.md  vhs-headswitching.md  visualizer-importer-rework.md  visualizer-refactoring.md  xdot-viewer-app-review.md  xdot-viewer-implementation-summary.md  xdot-viewer-layout-engine.md  xdot-viewer-session-2026-02-12.md  xdot-viewer-session-2026-02-13.md  xdot-viewer-session-2026-02-16.md  xdot-viewer-strip-layout-tests.md  xdot-viewer-widget-review.md
briefs/summer_2026_librarian_extension/: 01_librarian-webfetch-brief.md  02_librarian-lmstudio-compat-brief.md  03_librarian-content-parts-brief.md  04_librarian-mcp-client-brief.md  05_hindsight-standup-brief.md  05_librarian-lorebook-brief.md  06_hindsight-standup-brief.md  06_librarian-lorebook-brief.md  gemma4_probe.py
briefs/summer_2026_librarian_extension/manual_tests/: webfetch_live_extractors.py  webfetch_tier2_escalation.py
raven/: __init__.py  animation.py  app.py  arxiv2id.py  bgtask.py  chattree.py  check_cuda.py  config.py  hybridir.py  llmclient.py  nlpbackends.py  nlptools.py  pdf2bib.py  preprocess.py  utils.py  websearch.py  wos2bib.py
raven/avatar/: README.md  TODO.md  animator.json  animator.py  animator_bloom_only.json  animator_more_postfx.json  animator_no_postfx.json  animator_nobloom.json  animator_with_postfx.json  classify.py  client_api.py  client_util.py  config.py  editor.py  embed.py  example.py  netutil.py  postprocessor.py  server.py  upscaler.py  util.py  websearch.py
raven/avatar/client/: api.py  app.py  config.py
raven/avatar/common/: config.py  hfutil.py  netutil.py  running_average.py  upscaler.py
raven/avatar/pose_editor/: app.py
raven/avatar/readme/: README.md  TODO.md
raven/avatar/server/: animator.py  app.py  classify.py  embed.py  imagefx.py  tts.py  util.py  websearch.py
raven/avatar/settings_editor/: app.py
raven/cherrypick/: SPEC.md  __init__.py  app.py  compare.py  config.py  grid.py  gridnav.py  history.py  imageview.py  loader.py  preload.py  triage.py
raven/cherrypick/tests/: loader_bench.py  loader_bench_results_20260318.md  test_grid_nav.py  test_history.py  test_loader.py  test_preload.py  test_triage.py
raven/client/: README.md  api.py  avatar_controller.py  avatar_renderer.py  config.py  mayberemote.py  tts.py  util.py
raven/client/tests/: conftest.py  test_api.py  test_mayberemote.py
raven/common/: animation.py  audioutils.py  bgtask.py  deviceconfig.py  deviceinfo.py  docextract.py  docstring_utils.py  guiutils.py  hfutil.py  hybridir.py  logsetup.py  netutil.py  nlptools.py  numutils.py  readcsv.py  running_average.py  smoothvalue.py  stringmaps.py  utils.py
raven/common/audio/: __init__.py  codec.py  player.py  recorder.py  resample.py  utils.py
raven/common/gui/: animation.py  fontsetup.py  helpcard.py  layout_math.py  messagebox.py  utils.py  vumeter.py  widgetfinder.py
raven/common/image/: __init__.py  codec.py  lanczos.py  utils.py
raven/common/tests/: __init__.py  lanczos_visual_test.py  test_bgtask.py  test_deviceinfo.py  test_docextract.py  test_lanczos.py  test_logsetup.py  test_netutil.py  test_nlptools.py  test_numutils.py  test_readcsv.py  test_running_average.py  test_smoothvalue.py  test_stringmaps.py  test_text_normalize.py  test_utils.py
raven/common/text/: __init__.py  normalize.py
raven/common/video/: colorspace.py  compositor.py  postprocessor.py  upscaler.py
raven/conference_timer/: __init__.py  app.py  config.py
raven/librarian/: CLAUDE.md  README.md  app.py  appstate.py  avatar_controller.py  chat_controller.py  chattree.py  chatutil.py  config.py  filestore.py  hybridir.py  imagestore.py  llmclient.py  minichat.py  scaffold.py  sidecarstore.py  textfilestore.py
raven/librarian/tests/: conftest.py  test_appstate.py  test_chattree.py  test_chatutil.py  test_filestore.py  test_hybridir.py  test_imagestore.py  test_llmclient.py  test_scaffold.py  test_sidecarstore.py  test_textfilestore.py
raven/papers/: __init__.py  bibtex.py  burstbib.py  csv2bib.py  download.py  httpfetch.py  identifiers.py  pdf2bib.py  query.py  ratelimit.py  search.py  utils.py  wos2bib.py
raven/papers/tests/: test_bibtex.py  test_burstbib.py  test_csv2bib.py  test_download.py  test_httpfetch.py  test_identifiers.py  test_metadata.py  test_query.py  test_ratelimit.py  test_search.py  test_utils.py  test_wos2bib.py
raven/server/: README.md  animator.py  app.py  config.py  config_avatar_only.py  config_lowvram.py  embed.py  imagefx.py  tts.py  util.py  websearch.py
raven/server/modules/: avatar.py  avatarutil.py  classify.py  embeddings.py  imagefx.py  natlang.py  sanitize.py  stt.py  summarize.py  (+4 more)
raven/tools/: arxiv2id.py  arxiv_download.py  burstbib.py  check_audio_devices.py  check_cuda.py  csv2bib.py  dehyphenate.py  pdf2bib.py  qoi2png.py  wos2bib.py
raven/visualizer/: CLAUDE.md  README.md  REFACTORING_NOTES.md  annotation.py  app.py  app_state.py  config.py  entry_renderer.py  importer.py  importer_cli.py  info_panel.py  plotter.py  preprocess.py  selection.py  word_cloud.py
raven/xdot_viewer/: __init__.py  app.py  config.py  dot_utils.py
(+108 files in other folders)
